[package]
name = "invariant_autoswap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "invariant_autoswap"
doctest = false

[features]
all = []
jupiter = []
none = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
decimal = { path="../invariant/decimal" }
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
integer-sqrt = "0.1.5"
num-traits = "0.2.14"
bytemuck = "1.16.0"
invariant = { path="../invariant", features = ["cpi"] }