[package]
name = "locker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "locker"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["none"]
jupiter = []
none = []
all = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ['init-if-needed']}
anchor-spl = "0.29.0"
invariant = { path = "../invariant", features = ["cpi"]}
decimal = { path = "../invariant/decimal" }
bytemuck = "1.16.0"
